[gd_scene load_steps=6 format=2]

[ext_resource path="res://Defaults/DefaultFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Textures/BloomLogo.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuIndicator" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.270588, 0.270588, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -154.0
margin_right = 154.0
margin_bottom = 192.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tips" type="Label" parent="."]
anchor_right = 1.0
margin_left = 50.0
margin_top = 151.0
margin_right = -50.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 1 )
text = "This area should be replaced with a tip about Bloom!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -84.0
margin_top = 226.0
margin_right = 85.0
grow_horizontal = 2
grow_vertical = 0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 157.0
margin_bottom = 873.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intro" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 157.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Introduction"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 139.0
margin_right = 157.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 2 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 157.0
margin_bottom = 317.0
custom_fonts/font = SubResource( 2 )
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 417.0
margin_right = 157.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 2 )
text = "Level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 556.0
margin_right = 157.0
margin_bottom = 595.0
custom_fonts/font = SubResource( 2 )
text = "Level 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level5" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 695.0
margin_right = 157.0
margin_bottom = 734.0
custom_fonts/font = SubResource( 2 )
text = "Level 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level6" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 834.0
margin_right = 157.0
margin_bottom = 873.0
custom_fonts/font = SubResource( 2 )
text = "Level 6"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Intro" to="." method="_on_Intro_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level6" to="." method="_on_Level6_pressed"]
